--- a/assets/style.css
+++ b/assets/style.css
@@ -41,7 +41,7 @@ html{
     padding-bottom: 20px;
 }
 .main h2{
-    color:#fff;
+    color:#000;
     text-shadow: 0 0 30px #fff, 0 0 30px #fff;
     font-weight: bolder;
     text-align: center;
